--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "vuex": "3.5.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
